syntax = "proto3";

package retrom;

message GameMetadata {
  int32 game_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string cover_url = 4;
  optional string background_url = 5;
  optional string icon_url = 6;
  optional int64 igdb_id = 7;
}

message NewGameMetadata {
  optional int32 game_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string cover_url = 4;
  optional string background_url = 5;
  optional string icon_url = 6;
  optional int64 igdb_id = 7;
}

message UpdatedGameMetadata {
  int32 game_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string cover_url = 4;
  optional string background_url = 5;
  optional string icon_url = 6;
  optional int64 igdb_id = 7;
}

message PlatformMetadata {
  int32 platform_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string background_url = 4;
  optional string logo_url = 5;
  optional int64 igdb_id = 6;
}

message NewPlatformMetadata {
  optional int32 platform_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string background_url = 4;
  optional string logo_url = 5;
  optional int64 igdb_id = 6;
}

message UpdatedPlatformMetadata {
  int32 platform_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string background_url = 4;
  optional string logo_url = 5;
  optional int64 igdb_id = 6;
}
